2011-03-29  Steve Falkenburg  <sfalken@apple.com>

        More build fix.

        * WebCoreSupport/WebPlatformStrategies.h:

2011-03-29  Steve Falkenburg  <sfalken@apple.com>

        Build fix.

        * WebCoreSupport/WebPlatformStrategies.cpp:
        (WebPlatformStrategies::contextMenuItemTagLookUpInDictionary):

2011-03-29  Patrick Gansterer  <paroga@webkit.org>

        Unreviewed. Try to fix Windows build.

        * DOMEventsClasses.cpp: Added initguid.h again.

2011-03-29  Patrick Gansterer  <paroga@webkit.org>

        Reviewed by Adam Roben.

        [WIN] Cleanup includes in WebKit files
        https://bugs.webkit.org/show_bug.cgi?id=57381

        Add missing includes to fix build without precompiled header.
        Also fix paths in #include statements (e.g. WTF -> wtf).

        * AccessibleBase.h:
        * AccessibleDocument.h: Replace using statement with a qualified name.
        * CFDictionaryPropertyBag.h:
        * DOMEventsClasses.cpp:
        * DOMHTMLClasses.h:
        * DefaultDownloadDelegate.cpp:
        * DefaultDownloadDelegate.h:
        * DefaultPolicyDelegate.cpp:
        * DefaultPolicyDelegate.h:
        * WebCoreSupport/EmbeddedWidget.h:
        * WebCoreSupport/WebInspectorDelegate.h:
        * WebDataSource.h:
        * WebDatabaseManager.h:
        * WebElementPropertyBag.h:
        * WebFramePolicyListener.h:
        * WebGeolocationPolicyListener.h:
        * WebHistory.h:
        * WebKitClassFactory.h:
        * WebScriptWorld.h:
        * WebSerializedJSValue.h:
        * WebUserContentURLPattern.h:

2011-03-29  Steve Falkenburg  <sfalken@apple.com>

        Reviewed by Darin Adler.

        Use per-configuration vsprops in WebKit to avoid WebKitVSPropsRedirectionDir removal by MSVC IDE
        https://bugs.webkit.org/show_bug.cgi?id=57383

        Visual Studio's IDE was removing instances of $(WebKitVSPropsRedirectionDir) from